Initial integration with TornadoVM